--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="./src/assets/Banner.jpg" alt="Banner">
     </section>
 
-    
+
     <section id="info">
         <artile class="artigo">
             <div id="imagem-marvel">
@@ -60,7 +60,13 @@
         </artile>
     </section>
 
-    
+    <footer>
+        <div class="contatos">
+            <img src="./src/assets/facebook.png" alt="facebook" class="rede-social">
+            <img src="./src/assets/instagram.png" alt="Instagram" class="rede-social">
+            <img src="./src/assets/twitterx.png" alt="TwitterX" class="rede-social">
+        </div>
+    </footer>
 </body>
 
 </html>
