--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Herois</h1>
+            <h1>HEROIS</h1>
             <nav class="header-nav">
                 <ul>
-                    <li class="item-menu">Home</li>
-                    <li class="item-menu">Produtos</li>
-                    <li class="item-menu">Login</li>
+                    <li class="item-menu"><a href="#">HOME</a></li>
+                    <li class="item-menu"><a href="#">PRODUTOS</a></li>
+                    <li id="btn-login"><a href="#">LOGIN</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,7 +35,7 @@
         </artile>
         <artile class="artigo">
             <div class="fundo-artigo">
-                <h3></h3>
+                <h3>Marvel</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rhoncus ipsum et est accumsan
                     fermentum nec quis odio. Aliquam ut tincidunt purus, non sagittis urna. Quisque ultrices commodo
                     odio, vestibulum porta lacus malesuada vel. Etiam eget ex urna. In ut felis quis erat fringilla
@@ -50,7 +50,7 @@
         </artile>
         <artile class="artigo">
             <div class="fundo-artigo">
-                <h3></h3>
+                <h3>DC</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rhoncus ipsum et est accumsan
                     fermentum nec quis odio. Aliquam ut tincidunt purus, non sagittis urna. Quisque ultrices commodo
                     odio, vestibulum porta lacus malesuada vel. Etiam eget ex urna. In ut felis quis erat fringilla
@@ -66,6 +66,7 @@
             <img src="./src/assets/instagram.png" alt="Instagram" class="rede-social">
             <img src="./src/assets/twitterx.png" alt="TwitterX" class="rede-social">
         </div>
+        <small>&copy; 2024 - direitos reservados</small>
     </footer>
 </body>
 
