--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/style.css">
     <!-- FONTES EXTERNAS -->
-     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <title>Loja de Brinquedos</title>
 </head>
 
@@ -52,28 +54,31 @@
             <artile class="artigo">
                 <div class="fundo-artigo">
                     <h2>DC</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rhoncus ipsum et est accumsan
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rhoncus ipsum et est
+                        accumsan
                         fermentum nec quis odio. Aliquam ut tincidunt purus, non sagittis urna. Quisque ultrices commodo
                         odio, vestibulum porta lacus malesuada vel. Etiam eget ex urna. In ut felis quis erat fringilla
                         vulputate sit amet a risus. Etiam dapibus eleifend arcu eu blandit. Vivamus sodales velit est.
                         Vestibulum semper euismod consectetur.</p>
-                    </div>
-                </artile>
-                <artile class="artigo">
-                    <div id="imagem-dc">
-                        <img src="./src/assets/DC.jpg" alt="Imagem da DC">
-                    </div>
-                </artile>
+                </div>
+            </artile>
+            <artile class="artigo">
+                <div id="imagem-dc">
+                    <img src="./src/assets/DC.jpg" alt="Imagem da DC">
+                </div>
+            </artile>
         </div>
     </section>
 
     <footer>
-        <div class="contatos">
-            <img src="./src/assets/facebook.png" alt="facebook" class="rede-social">
-            <img src="./src/assets/instagram.png" alt="Instagram" class="rede-social">
-            <img src="./src/assets/twitterx.png" alt="TwitterX" class="rede-social">
+        <div class="footer">
+            <small>&copy; 2024 - direitos reservados</small>
+            <div class="contatos">
+                <img src="./src/assets/facebook.png" alt="facebook" class="rede-social">
+                <img src="./src/assets/instagram.png" alt="Instagram" class="rede-social">
+                <img src="./src/assets/twitterx.png" alt="TwitterX" class="rede-social">
+            </div>
         </div>
-        <small>&copy; 2024 - direitos reservados</small>
     </footer>
 </body>
 
